--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"  >
   <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" href="./favicon.png" type="image/png">
   <link rel="stylesheet" href="./Nexus - Connecting a Decentralized World_files/bootstrap.min.css" media="screen">
   <link rel="stylesheet" href="./Nexus - Connecting a Decentralized World_files/style.css" media="screen">
