--- a/Finite - Respaldo por Acervo.html
+++ b/Finite - Respaldo por Acervo.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" class=" video"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
 
 
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
 <link rel="icon" href="./favicon.png" type="image/png">
 
