Update Finite - Salida a Moneda.html
d

--- a/Finite - Salida a Moneda.html
+++ b/Finite - Salida a Moneda.html
@@ -27,7 +27,7 @@
           <div class="row align-items-center">
             <div class="col">
               <div class="logo">
-                <a class="logo-dark" href="https://finite-foundation.org/"><img src="./Nexus - Connecting a Decentralized World_files/logo.png" alt="logo.png"></a>		  
+                <a class="logo-dark" href="./index.html"><img src="./Nexus - Connecting a Decentralized World_files/logo.png" alt="logo.png"></a>		  
               </div>
             </div>
             <div class="col-auto">
